brat/test/golden/error/kbadvec4.brat.golden
Error in test/golden/error/kbadvec4.brat@FC {start = Pos {line = 2, col = 7}, end = Pos {line = 2, col = 13}}:
f = { [1, 2] => true }
      ^^^^^^

  Type error: Expected something of type `Bool` but got `1`

